--- a/examples/Definition-and-Properties.tex
+++ b/examples/Definition-and-Properties.tex
@@ -63,7 +63,7 @@ $\not\! a \not\! b + \not\! b \not\!a =2(ab)$ \qquad $ \not\! a \not\! a = a^{2}
 And last equations become :
 \begin{enumerate}
 \item   $ \gamma ^{\mu } \not\! a \gamma _{\mu }=-2 \not\! a $
-\item \item $\gamma ^{\mu }\not\! a \not\! b \gamma _{\mu }=4 (ab)I_{4}$
+\item $\gamma ^{\mu }\not\! a \not\! b \gamma _{\mu }=4 (ab)I_{4}$
 \item $\gamma ^{\mu }\not\! a\not\! b\not\! c\gamma _{\mu }=-2\not\! a\not\! b\not\! c $
 \end{enumerate}
 \item The following trace identities are satisfied by the Gamma matrices :
