--- a/presentation.tex
+++ b/presentation.tex
@@ -34,11 +34,11 @@
 % thesis details (preamble)
 %=================================================
 
-<<<<<<< HEAD
+%<<<<<<< HEAD
 \title[ \hspace{0.8cm} \insertframenumber/\inserttotalframenumber]{{\sc Clifford Algebra And Gamma Matrices }}
 =======
 \title[ \hspace{0.8cm} \insertframenumber/\inserttotalframenumber]{{\sc Gamma Matrices and Clifford algebra }}
->>>>>>> cc42e4189222f3e3564d1d8e613c07b3b06bb6c0
+%>>>>>>> cc42e4189222f3e3564d1d8e613c07b3b06bb6c0
 \author{{Asma BOUTAGAYOUT \\ Ismail EZZAKI}}
 \date  {\today}
 \institute{University Cadi Ayyad \\Faculty of Sciences Semlalia \\ Physics Departement}
@@ -53,7 +53,7 @@
 \begin{frame}
   \begin{center}
     \vspace{0.1cm}
- %   \includegraphics[scale=0.25]{Dessin12.png}
+%   \includegraphics[scale=0.25]{Dessin12.png}
   \end{center}
 \titlepage
 \end{frame}
@@ -86,7 +86,7 @@
 %\input{examples/Dirac-equation}
 \subsection{Gamma matrices’ rule}
 \input{examples/Gamma-matrices-rule}
-\subsection{Definition and Properties}
+\subsection{Gammma matrices' Properties}
 \input{examples/Definition-and-Properties}
 \subsection{The fifth Gamma matrix $\gamma^5$}
 \input{examples/Gamma-5}
@@ -108,11 +108,11 @@ CONCLUSION
 %========================
 % thanks
 %========================
-\begin{frame}\frametitle{Thanks}
+\begin{frame}\frametitle{Finaly...}
 \centering
 
-Thanks for your attention!\\
-Any questions?
+Thank you for your attention!\\
+Any Questions?
 \end{frame}
 
 
