--- a/examples/Bilinear-covariants.tex
+++ b/examples/Bilinear-covariants.tex
@@ -3,7 +3,10 @@
 %\subsection{Theorem Code}
 \label{theoremCode}
 \begin{frame}\frametitle{Bilinear covariants}
-all spinor fields live in the a 4-dimensional spacetime 
+\begin{itemize}
+	\item 
+
+All spinor fields live in the a 4-dimensional spacetime \\
 spacetime time algebra
 
 \begin{center}
@@ -16,8 +19,12 @@ $\gamma^5 \gamma^\mu$ & axial vector & 3 & 4\\\hline
 $\gamma^5$ & pseudoscalar & 4 & 1\\\hline
 \end{tabular}
 \end{center}
+	\item 
 This exhausts all possibilities. The total number of components is 16, meaning that the set $\{ 1-\gamma^\mu-\sigma \gamma^\nu-\gamma^5 \gamma^\mu-\gamma^5\}$
-\\ makes a complete basis for any four-by-four
-matrix.\\Such $\overline{\Psi} \Gamma\Psi$ currents are called \textbf{bilinear covariants}.
-
+	\item 
+Makes a complete basis for any four-by-four
+matrix.
+	\item 
+Such $\overline{\Psi} \Gamma\Psi$ currents are called \textbf{bilinear covariants}.
+\end{itemize}
 \end{frame}
