--- a/examples/Cl-structure.tex
+++ b/examples/Cl-structure.tex
@@ -5,8 +5,10 @@
 \begin{frame}\frametitle{Exemple of Clifford Algebras}
 
 
-\begin{center}
 
+Most used Cliffords Algebra in physics :\\
+\begin{center}
+Nondegenerate Clifford algebra  $Cl_{p,q}$
 \end{center}
 
 
@@ -23,7 +25,7 @@ $Cl_{1,3}$ & Dirac & 16\\\hline
 $Cl_{m,n}$ & sigature $(m,n)$ & $2^{n+m}$\\\hline
 \end{tabular}
 
- \caption{Exemple of Clifford Algebras}
+ \caption{Exemple of Clifford Algebras  $Cl_{p,q}$ }
 \end{table}
 
 
