--- a/examples/Gamma-5.tex
+++ b/examples/Gamma-5.tex
@@ -20,14 +20,16 @@ $ \gamma ^{5}=i \gamma^{0} \gamma^{1} \gamma^{2} \gamma^{3} ={\begin{pmatrix}0&0
 \begin{itemize}
  \item  $(\gamma^5)^2 = 1$
 \item anti-commutes with every other $\gamma$:
-$\{\gamma^5,\gamma^\mu\}=0 \Longrightarrow \gamma^5\times \gamma^\mu = - \gamma^\mu \times \gamma^5 $
+\begin{center}
+	$\{\gamma^5,\gamma^\mu\}=0 \Longrightarrow \gamma^5\times \gamma^\mu = - \gamma^\mu \times \gamma^5 $
+\end{center}
  
-\end{itemize}
 
 
 
+\item
 $\operatorname {tr} \left(\gamma ^{5}\right)=\operatorname {tr} \left(\gamma ^{\mu }\gamma ^{\nu }\gamma ^{5}\right)=0$
-
+\end{itemize}
 
 \end{frame}
 
@@ -37,10 +39,14 @@ $\operatorname {tr} \left(\gamma ^{5}\right)=\operatorname {tr} \left(\gamma ^{\
 
 \begin{frame}\frametitle{The fifth Gamma matrix}
 
+\begin{center}
+	
+\begin{align}
 
-
-$\overline{\Psi} \gamma^5 \Psi  \, \, \Longrightarrow (P\Psi)^{+} \gamma^0 \gamma^5  (P\Psi) \\  \, \, \, \, \,  \Longrightarrow \Psi^{+} (\gamma^0 )^{+} \gamma^5 \gamma^0 \Psi \\  \, \, \, \, \,  \Longrightarrow - \Psi^{+}  (\gamma^0 )^{+}  \gamma^5  \Psi \\  \, \, \, \, \, \Longrightarrow  - \overline{\Psi} \gamma^5 \Psi \\  \, \, \, \, \, \Longrightarrow $ Pseudo-scalar 
+$\overline{\Psi} \gamma^5 \Psi  \, \, \Longrightarrow (P\Psi)^{+} \gamma^0 \gamma^5  (P\Psi) \\  \, \, \, \, \,  \Longrightarrow \Psi^{+} (\gamma^0 )^{+} \gamma^5 \gamma^0 \Psi \\  \, \, \, \, \,  \Longrightarrow - \Psi^{+}  (\gamma^0 )^{+}  \gamma^5  \Psi \\ \Longrightarrow  - \overline{\Psi} \gamma^5 \Psi \\  \, \, \, \, \, \Longrightarrow $ Pseudo-scalar 
   
+\end{align}
+\end{center}
 
 \\\\
 
