--- a/examples/Quaternion.tex
+++ b/examples/Quaternion.tex
@@ -4,19 +4,21 @@
 \label{definition}
 \begin{frame}\frametitle{Quaternions}
 Quaternions are an extension of complex numbers with three imaginary units $i$, $j$, and $k$.
-
-Quaternion algebra is an associative, non-commutative division ring with four basic elements: a real identity 1 and three different kinds of imaginary units i, j, and k called pure quaternion basis which obey the multiplication rules:
+\\
+Quaternion algebra is an associative, non-commutative with four basic elements: %a real identity 
+1 and three different kinds of imaginary units i, j, and k 
+%called pure quaternion basis which obey the multiplication rules:
 \begin{center}
 
 $ i^2 =j^2 = k^2 = -1$\\ $i\times j = -j\times i = k$ \\ $i \times j \times k=1 $
 \end{center}
 The quaternion operator written in the conventional form :
 \begin{center}
-$q=q_{0}\times 1+q_{1}\times i+q_{2}\times j+q_{3}\times k$
+$q=a\times 1+b\times i+c\times j+d\times k$\\
+$q=\sqrt{q\bar{q}}= \sqrt{a^2+b^2+c^2+d^2}$
 
 \end{center}
 
-with $q_{0},q_{1},q_{2},q_{3}$ are Cayley-Klein parameters.
  
 
 \end{frame}
