--- a/examples/Representation.tex
+++ b/examples/Representation.tex
@@ -2,42 +2,62 @@
 % --------------------------------------------------- Slide --
 %\subsection{Definition}
 \label{definition}
-\begin{frame}\frametitle{Dirac basis}
+\begin{frame}[t]\frametitle{Dirac basis}
 
-in the Dirac basis:\\
+in the Dirac basis:\newline
 
-$\gamma ^{0}={\begin{pmatrix}I_{2}&0\\0&-I_{2}\end{pmatrix}},\quad \gamma ^{k}={\begin{pmatrix}0&\sigma ^{k}\\-\sigma ^{k}&0\end{pmatrix}},\quad \gamma ^{5}={\begin{pmatrix}0&I_{2}\\I_{2}&0\end{pmatrix}}$
+
+\begin{center}
+	$\gamma ^{0}={\begin{pmatrix}I_{2}&0\\0&-I_{2}\end{pmatrix}},\quad \gamma ^{k}={\begin{pmatrix}0&\sigma ^{k}\\-\sigma ^{k}&0\end{pmatrix}},\quad \gamma ^{5}={\begin{pmatrix}0&I_{2}\\I_{2}&0\end{pmatrix}}$
+ 
+\end{center}
+\newline
+ \newline
+\begin{center}
+	 
+$( P^\mu P_\mu - m^2 )=( \gamma^k P_k + m)(\gamma_k P^k  -m) = 0$ 
+ 
+\end{center}
  
 \begin{itemize}
+	 \item Dirac equation $\equiv$ K-G equation
  \item In bass energy
   \item  Appropriate for acting on Dirac spinors
 \end{itemize}
 
 \end{frame}
-\begin{frame}\frametitle{Majorana basis}
+\begin{frame}[t]\frametitle{Majorana basis}
 in the Majorana basis:\\
 
-
-${\displaystyle {\begin{aligned}\gamma ^{0}&={\begin{pmatrix}0&\sigma ^{2}\\\sigma ^{2}&0\end{pmatrix}},&\gamma ^{1}&={\begin{pmatrix}i\sigma ^{3}&0\\0&i\sigma ^{3}\end{pmatrix}},&\gamma ^{2}&={\begin{pmatrix}0&-\sigma ^{2}\\\sigma ^{2}&0\end{pmatrix}},\\\gamma ^{3}&={\begin{pmatrix}-i\sigma ^{1}&0\\0&-i\sigma ^{1}\end{pmatrix}},&\gamma ^{5}&={\begin{pmatrix}\sigma ^{2}&0\\0&-\sigma ^{2}\end{pmatrix}},\end{aligned}}}$
-\\
+\newline
+\begin{center}
+	${\displaystyle {\begin{aligned}\gamma ^{0}&={\begin{pmatrix}0&\sigma ^{2}\\\sigma ^{2}&0\end{pmatrix}},&\gamma ^{1}&={\begin{pmatrix}i\sigma ^{3}&0\\0&i\sigma ^{3}\end{pmatrix}},&\gamma ^{2}&={\begin{pmatrix}0&-\sigma ^{2}\\\sigma ^{2}&0\end{pmatrix}},\\\gamma ^{3}&={\begin{pmatrix}-i\sigma ^{1}&0\\0&-i\sigma ^{1}\end{pmatrix}},&\gamma ^{5}&={\begin{pmatrix}\sigma ^{2}&0\\0&-\sigma ^{2}\end{pmatrix}}\end{aligned}}}$
+\end{center}
+\newline
 
 \begin{itemize}
- \item  ??? Positive energie for particule anti-particule
+ \item  Positive energie for particule and anti-particule
  \item  Appropriate for Majorana fermion  
 \item  A Majorana fermion is defined as a fermion that equals to its charge conjugation
 \end{itemize}
 
 \end{frame}
-\begin{frame}\frametitle{ Weyl (chiral) basis }
+\begin{frame}[t]\frametitle{ Weyl (chiral) basis }
 % 
 % Another common choice is the Weyl or chiral basis,[5] in which ${\displaystyle \gamma ^{k}}\gamma ^{k}$ remains the same but ${\displaystyle \gamma ^{0}}\gamma ^{0}$ is different, and so ${\displaystyle \gamma ^{5}}\gamma ^{5}$ is also different, and diagonal,
 
+in the Weyl basis:\newline
 
-$\gamma ^{0}={\begin{pmatrix}0&I_{2}\\I_{2}&0\end{pmatrix}},\quad \gamma ^{k}={\begin{pmatrix}0&\sigma ^{k}\\-\sigma ^{k}&0\end{pmatrix}},\quad \gamma ^{5}={\begin{pmatrix}-I_{2}&0\\0&I_{2}\end{pmatrix}},$
+\begin{center}
+	
+$\gamma ^{0}={\begin{pmatrix}0&I_{2}\\I_{2}&0\end{pmatrix}},\quad \gamma ^{k}={\begin{pmatrix}0&\sigma ^{k}\\-\sigma ^{k}&0\end{pmatrix}},\quad \gamma ^{5}={\begin{pmatrix}-I_{2}&0\\0&I_{2}\end{pmatrix}}$
 
-\\
+\end{center}
+\newline
 
-${\displaystyle \psi _{L}={\frac {1}{2}}\left(1-\gamma ^{5}\right)\psi ={\begin{pmatrix}I_{2}&0\\0&0\end{pmatrix}}\psi ,\quad \psi _{R}={\frac {1}{2}}\left(1+\gamma ^{5}\right)\psi ={\begin{pmatrix}0&0\\0&I_{2}\end{pmatrix}}\psi .}$
+\begin{center}
+	${\displaystyle \psi _{L}={\frac {1}{2}}\left(1-\gamma ^{5}\right)\psi ={\begin{pmatrix}I_{2}&0\\0&0\end{pmatrix}}\psi ,\quad \psi _{R}={\frac {1}{2}}\left(1+\gamma ^{5}\right)\psi ={\begin{pmatrix}0&0\\0&I_{2}\end{pmatrix}}\psi }$
+\end{center}
 
 
 \begin{itemize}
