--- a/presentation.tex
+++ b/presentation.tex
@@ -26,7 +26,7 @@
 %=================================================
 \usepackage[ruled, linesnumbered, vlined]{algorithm2e}
 
-\usepackage{epsfig, subfigure, amssymb, multirow, algorithmic, amsmath}
+\usepackage{graphicx ,epsfig, subfigure, amssymb, multirow, algorithmic, amsmath}
 \newcommand*{\superscript}[1]{\ensuremath{^{\rm #1}}}
 \newcommand*{\subscript}[1]{\ensuremath{_{\rm #1}}}
 
@@ -34,11 +34,8 @@
 % thesis details (preamble)
 %=================================================
 
-<<<<<<< HEAD
 \title[ \hspace{0.8cm} \insertframenumber/\inserttotalframenumber]{{\sc Clifford Algebra And Gamma Matrices }}
-=======
-\title[ \hspace{0.8cm} \insertframenumber/\inserttotalframenumber]{{\sc Gamma Matrices and Clifford algebra }}
->>>>>>> cc42e4189222f3e3564d1d8e613c07b3b06bb6c0
+
 \author{{Asma BOUTAGAYOUT \\ Ismail EZZAKI}}
 \date  {\today}
 \institute{University Cadi Ayyad \\Faculty of Sciences Semlalia \\ Physics Departement}
